--- a/app/src/main/res/menu/menu_main.xml
+++ b/app/src/main/res/menu/menu_main.xml
@@ -18,4 +18,8 @@
         android:id="@+id/action_checkboxes"
         android:title="@string/action_checkboxes"
         app:showAsAction="never" />
+    <item
+        android:id="@+id/action_spinners"
+        android:title="Spinners"
+        app:showAsAction="never" />
 </menu>
